feat: return email record after creation
