# src/emailController.ts
@@ -2,12 +2,13 @@ import { Body, Controller, Post, Route, SuccessResponse } from "tsoa";
 import { inject, singleton } from "tsyringe";
 import { Dependency } from "./dependency";
 import { Email } from "./types/email";
-import { UUID } from "./types/uuid";
+import { EmailRecord } from "./types/emailRecord";
 
 export interface IEmailService {
-  createEmailRecord(email: Email): Promise<UUID>;
+  createEmailRecord(email: Email): Promise<EmailRecord>;
 }
 
+// tsoa doesn't allow reading a route path from a variable, so this value can't be extracted
 @Route("api/v1/emails")
 @singleton()
 export class EmailController extends Controller {
@@ -17,7 +18,10 @@ export class EmailController extends Controller {
 
   @Post()
   @SuccessResponse("201", "Created")
-  async createEmail(@Body() email: Email): Promise<void> {
-    await this.service.createEmailRecord(email);
+  async createEmail(@Body() email: Email): Promise<EmailRecord> {
+    const record = await this.service.createEmailRecord(email);
+    this.setHeader("Location", "/api/v1/emails/" + record.id);
+
+    return record;
   }
 }
